# dk

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  REFACTOR.md  REPORT.md  TODO.md  app.py  dependencies.py  factory.py  install.sh  justfile  model_config.json  pyproject.toml  requirements.txt  run.sh  service_locator.py  suppress_warnings.py
.github/workflows/: bandit.yml  lint.yml  tests.yml
agent/: agent.py
agent/providers/: __init__.py  anthropic.py  base.py  config.py  ollama.py  openai.py  openrouter.py
api/: routes.py
api/endpoints/: __init__.py  active_users.py  agent.py  api_configs.py  config.py  documents.py  documents_collection.py  (+5 more)
api_configs/: __init__.py  manager.py  models.py  repository.py  usage_tracker.py
client/: README.md  __init__.py  client.py
config/: settings.py
database/: __init__.py  vector_db_manager.py
docs/: API_AND_RPC_HANDLERS.md  API_CONFIGS_IMPLEMENTATION.md  CHROMADB_GUIDE.md  DOCUMENTS_API.md  DOCUMENTS_UI_GUIDE.md  POLICY_TO_API_RENAME_SUMMARY.md  SETUP_AND_DEPLOYMENT.md  SYFT_CORE_DOCS.md  SYFT_RPC_DOCUMENTATION.md  UI_UX_GUIDELINES.md
policies/: SOLUTION_SUMMARY.md  __init__.py  enforcer.py  manager.py  models.py  repository.py  service.py  triage_models.py  triage_repository.py
rpc/: rpc_handler.py
services/: __init__.py  api_config_service.py  prompt_service.py  scheduler_service.py  triage_notification_service.py  websocket_service.py  websocket_types.py
startup/: initialization.py
syftbox/: __init__.py  client.py  jobs.py  message_handler.py  scheduler.py
tests/: conftest.py
utils/: retry.py  warning_filters.py
(+64 files in other folders)
